kubernetes/archive/apps/default/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: default
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:4.0.17.2952-ls313@sha256:0b3f344388bd7bed4f2f770058de795e76447e4a481b83c8d5f8fed489371fde
          ports:
            - containerPort: 8989
          livenessProbe:
            httpGet:
              path: /ping
              port: 8989
            initialDelaySeconds: 3
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /ping
              port: 8989
            initialDelaySeconds: 3
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - NET_RAW
                - SYS_CHROOT
                - MKNOD
                - AUDIT_WRITE
          volumeMounts:
            - name: sonarr-data
              mountPath: /config
            - name: media
              mountPath: /data
          resources:
            requests:
              cpu: 100m
            # limits:
            #   memory: 1Gi
      volumes:
        - name: sonarr-data
          persistentVolumeClaim:
            claimName: sonarr-data-pvc
        - name: media
          nfs:
            server: 10.77.1.101
            path: /mnt/slow/media
            readOnly: false
